= Changelog
:toc:

== master

=== New Features

• Make options unambiguous with subcommands.
`--profile` at the parent was getting matched with the `-p` for `--password` at the child.

• Introduce new error indicating which options are getting matched with ambiguous options.

=== Minor changes

• Fix unknown option warning formatting.
Each warning has its own line and it is preceded by `WARNING: `.

== v0.14.1 Golang Bug fix: module install error

Bypass double dot golang modules error:
https://github.com/golang/go/issues/27299

== v0.14.0 Breaking Changes

As the releases before, this release has 100% test coverage.

This release introduces bash completion by default and works out many kinks around subcommands.
An example showing subcommands can be found in https://github.com/DavidGamba/go-getoptions/tree/master/examples/mygit[./examples/mygit].

=== Breaking changes

• Remove support for Go < v1.10 (v1.5 - v1.9).
• Rename `getoptions.Option` to `getoptions.Value`.
+
WARNING: A new `getoptions.Option` method is has been introduced, but the new one returns `*option.Option` instead.

• Change the argument of `opt.SetMode` and `opt.SetUnknownMode` from a string to a `getoptions.Mode` and `getoptions.UnknownMode` type.
Makes it easier to autodiscover valid arguments for the method.

• Refactor section help methods into the main `opt.Help` one.
+
[source, diff]
----
- opt.HelpName()
+ opt.Help(getoptions.HelpName)

- opt.HelpSynopsis()
+ opt.Help(getoptions.HelpSynopsis)

- opt.HelpCommandList()
+ opt.Help(getoptions.HelpCommandList)

- opt.HelpOptionList()
+ opt.Help(getoptions.HelpOptionList)
----
+
To print all the sections of the automated help, continue to use `opt.Help()`.

=== New Features

• Implement bash completion by default.
+
Add the following to your `.bashrc`: +
`complete -o default -C "/binary/location/myscript" myscript`

• New `getoptions.Option` method that returns `*option.Option`.